# Tw_stock_indicator

./: .gitignore  .gitlab-ci.yml  MACDexceed.py  MAexceed.py  MAexceedStopLoss.py  README.md  RSIBounce.py  RSIExceed.py  SMAexceed.py  clients.py  indicator.py  main.py  pyproject.toml  requirements.txt  routers.py  run.sh  utils.py
.github/workflows/: docker-publish.yml
docker/: Dockerfile  build.sh  docker-compose.yaml
strategy/: MA.py  MACDMethod.py  MAStopLoss.py  RSIEx.py  RSIrespond.py  SMAArray.py  __init__.py  base.py
tests/: test_backtest.py  test_main.py  test_models.py  test_services.py  test_stock_service.py  test_web.py
tw_stock_indicator/: __init__.py  logger.py  main.py
tw_stock_indicator/models/: __init__.py  indicators.py  rules.py
tw_stock_indicator/services/: __init__.py  backtest_service.py  indicator_calculator.py  indicator_service.py  rule_service.py  signal_evaluator.py  stock_service.py
tw_stock_indicator/web/: __init__.py
tw_stock_indicator/web/routes/: __init__.py  api.py  dashboard.py
tw_stock_indicator/web/static/css/: main.css
tw_stock_indicator/web/static/js/: chart.js  dashboard.js  rule_designer.js  stock_selector.js
tw_stock_indicator/web/templates/: base.html  dashboard.html
tw_stock_indicator/web/templates/components/: indicator_card.html  rule_designer.html  stock_selector.html
