[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tw-stock-indicator"
version = "0.1.0"
description = "台灣股票技術指標分析工具，提供 Flask Web 儀表板展示股市進出場盈利指標與規則設計器。"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "Flask>=3.0",
    "SQLAlchemy>=2.0",
    "PyMySQL>=1.1",
]

[project.scripts]
tw-stock-indicator = "tw_stock_indicator.main:main"

[tool.setuptools.packages.find]
include = ["tw_stock_indicator*"]

[tool.setuptools.package-data]
tw_stock_indicator = [
    "web/templates/**/*.html",
    "web/static/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
